unpackaged/main/default/objects/Programme__c/Programme__c.object-meta.xml
<CustomObject>
    <label>Programme</label>
    <nameField>
        <label>Programme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>