unpackaged/main/default/objects/Programme__c/fields/D3M_Required__c.field-meta.xml
<CustomField>
    <fullName>D3M_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if a programme is required for D3M.</description>
    <inlineHelpText>Check this box if this programme is required for the D3M Toolset.</inlineHelpText>
    <label>D3M Required?</label>
    <type>Checkbox</type>
</CustomField>