unpackaged/main/default/objects/Programme__c/fields/IsEAPQPRequired__c.field-meta.xml
<CustomField>
    <fullName>IsEAPQPRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine whether the Programme is required for eAPQP.  This affects whether the programme is visible in the eEnablement Request Form</description>
    <inlineHelpText>Check this to have the Programme appear in the eEnablement Request Form</inlineHelpText>
    <label>eAPQP Required?</label>
    <type>Checkbox</type>
</CustomField>