unpackaged/main/default/objects/Programme__c/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to identify if record is a test record.</description>
    <inlineHelpText>Tick this box if this record is a test record.</inlineHelpText>
    <label>IsTest</label>
    <type>Checkbox</type>
</CustomField>