unpackaged/main/default/objects/Programme__c/fields/LL5ApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>LL5ApproverEmail__c</fullName>
    <label>LL5 Approver</label>
    <type>Email</type>
</CustomField>